--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "natours",
   "version": "1.0.0",
   "description": "node express mongodb",
-  "main": "index.js",
+  "main": "index.js", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
