--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=mehari
-PASSWORD=123456
+DATABASE=mongodb+srv://meharifitih:<PASSWORD>@cluster0.abqrjk4.mongodb.net/natours?retryWrite=true
+DATABSE_LOCAL = mongodb://localhost:27017/natours
+DATABASE_PASSWORD=7Nq7FsomXFCbsK0d
