--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^5.13.20",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -25,5 +26,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
+  },
+  "engines":{
+    "node":">=10.0.0"
   }
 }
