--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "node express mongodb",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "node --inspect server.js"
   },
   "keywords": [],
   "author": "",
