--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT=3000
 DATABASE=mongodb+srv://meharifitih:<PASSWORD>@cluster0.abqrjk4.mongodb.net/natours?retryWrite=true
 DATABSE_LOCAL = mongodb://localhost:27017/natours
 DATABASE_PASSWORD=7Nq7FsomXFCbsK0d
+
+JWT_SECRETE=use-altra-secure-and-long-secrete
+JWT_EXPIRES_IN=90d
