--- a/config.env
+++ b/config.env
@@ -4,5 +4,9 @@ DATABASE=mongodb+srv://meharifitih:<PASSWORD>@cluster0.abqrjk4.mongodb.net/natou
 DATABSE_LOCAL = mongodb://localhost:27017/natours
 DATABASE_PASSWORD=7Nq7FsomXFCbsK0d
 
-JWT_SECRETE=use-altra-secure-and-long-secrete
+JWT_SECRET=use-altra-secure-and-long-secrete
 JWT_EXPIRES_IN=90d
+EMAIL_USERNAME=41fe76fc08dbfb
+EMAIL_PASSWORD=a2ce2d1f971896
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
