remove password from the reponse

--- a/config.env
+++ b/config.env
@@ -6,6 +6,8 @@ DATABASE_PASSWORD=7Nq7FsomXFCbsK0d
 
 JWT_SECRET=use-altra-secure-and-long-secrete
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+
 EMAIL_USERNAME=41fe76fc08dbfb
 EMAIL_PASSWORD=a2ce2d1f971896
 EMAIL_HOST=sandbox.smtp.mailtrap.io
