--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://meharifitih:<PASSWORD>@cluster0.abqrjk4.mongodb.net/natours?retryWrite=true
 DATABSE_LOCAL = mongodb://localhost:27017/natours
-DATABASE_PASSWORD=<your password>
+DATABASE_PASSWORD=IWiEJljGOYuYXXqG
 
 JWT_SECRET=use-altra-secure-and-long-secrete
 JWT_EXPIRES_IN=90d
